--- a/index.html
+++ b/index.html
@@ -17,103 +17,27 @@
 
 <body>
     <div class="container">
+
         <div class="d-flex justify-content-start">
             <span class="h1 m-5">Plants</span>
-            <a class="btn btn-primary btn-lg m-auto ">New Entry</a>
+            <a class="btn btn-primary btn-lg m-auto" id="btn-new-entry">New Entry</a>
         </div>
+
         <div id="entries" class="d-flex flex-wrap">
-            <div class="card" style="width: 18rem;">
+            <!-- <div class="card">
                 <div class="card-body">
                     <span class="card-title">Common Name, </span>
                     <span class="fw-light fst-italic">Scientific Name</span>
                     <span class="card-text fw-bold">Family</span>
                     <p class="card-text">
-                        Description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum vitae praesentium
-                        incidunt culpa accusantium exercitationem nam illum sequi omnis tempore.
+                        asdkfsa;dfa;s
                     </p>
-                    <a class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#modalEditEntry">Edit</a>
+                    <a class="btn btn-secondary" id="btn-edit-entry">Edit</a>
                     <a class="btn btn-danger">Delete</a>
                 </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <span class="card-title">Common Name, </span>
-                    <span class="fw-light fst-italic">Scientific Name</span>
-                    <span class="card-text fw-bold">Family</span>
-                    <p class="card-text">
-                        Description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum vitae praesentium
-                        incidunt culpa accusantium exercitationem nam illum sequi omnis tempore.
-                    </p>
-                    <a class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#modalEditEntry">Edit</a>
-                    <a class="btn btn-danger">Delete</a>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <span class="card-title">Common Name, </span>
-                    <span class="fw-light fst-italic">Scientific Name</span>
-                    <span class="card-text fw-bold">Family</span>
-                    <p class="card-text">
-                        Description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum vitae praesentium
-                        incidunt culpa accusantium exercitationem nam illum sequi omnis tempore.
-                    </p>
-                    <a class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#modalEditEntry">Edit</a>
-                    <a class="btn btn-danger">Delete</a>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <span class="card-title">Common Name, </span>
-                    <span class="fw-light fst-italic">Scientific Name</span>
-                    <span class="card-text fw-bold">Family</span>
-                    <p class="card-text">
-                        Description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum vitae praesentium
-                        incidunt culpa accusantium exercitationem nam illum sequi omnis tempore.
-                    </p>
-                    <a class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#modalEditEntry">Edit</a>
-                    <a class="btn btn-danger">Delete</a>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <span class="card-title">Common Name, </span>
-                    <span class="fw-light fst-italic">Scientific Name</span>
-                    <span class="card-text fw-bold">Family</span>
-                    <p class="card-text">
-                        Description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum vitae praesentium
-                        incidunt culpa accusantium exercitationem nam illum sequi omnis tempore.
-                    </p>
-                    <a class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#modalEditEntry">Edit</a>
-                    <a class="btn btn-danger">Delete</a>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <span class="card-title">Common Name, </span>
-                    <span class="fw-light fst-italic">Scientific Name</span>
-                    <span class="card-text fw-bold">Family</span>
-                    <p class="card-text">
-                        Description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum vitae praesentium
-                        incidunt culpa accusantium exercitationem nam illum sequi omnis tempore.
-                    </p>
-                    <a class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#modalEditEntry">Edit</a>
-                    <a class="btn btn-danger">Delete</a>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <span class="card-title">Common Name, </span>
-                    <span class="fw-light fst-italic">Scientific Name</span>
-                    <span class="card-text fw-bold">Family</span>
-                    <p class="card-text">
-                        Description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum vitae praesentium
-                        incidunt culpa accusantium exercitationem nam illum sequi omnis tempore.
-                    </p>
-                    <a class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#modalEditEntry">Edit</a>
-                    <a class="btn btn-danger">Delete</a>
-                </div>
-            </div>
+            </div> -->
         </div>
+
     </div>
 
     <!-- Modal -->
@@ -148,7 +72,7 @@
                     </div>
                     <div class="modal-footer">
                         <a class="btn btn-secondary" data-bs-dismiss="modal">Close</a>
-                        <a class="btn btn-primary">Save</a>
+                        <a class="btn btn-primary" id="btn-save">Save</a>
                     </div>
             </div>
             </form>
