--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WAPP!!!</title>
+    <title>Week 12 - CRUD APP</title>
 
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
@@ -24,18 +24,6 @@
         </div>
 
         <div id="entries" class="d-flex flex-wrap">
-            <!-- <div class="card">
-                <div class="card-body">
-                    <span class="card-title">Common Name, </span>
-                    <span class="fw-light fst-italic">Scientific Name</span>
-                    <span class="card-text fw-bold">Family</span>
-                    <p class="card-text">
-                        asdkfsa;dfa;s
-                    </p>
-                    <a class="btn btn-secondary" id="btn-edit-entry">Edit</a>
-                    <a class="btn btn-danger">Delete</a>
-                </div>
-            </div> -->
         </div>
 
     </div>
